--- a/views/home.jade
+++ b/views/home.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	.well(style="max-width: 700px; margin: 2em auto")
+	.well(style="max-width: 700px; margin: 2em auto; padding: 3em")
 		h1 Prototipo - Home
 		form(role="form", ).form-horizontal
 			.form-group
