--- a/views/layout/_header.jade
+++ b/views/layout/_header.jade
@@ -5,7 +5,7 @@ nav(role="navigation").navbar.navbar-default
 			span.icon-bar
 			span.icon-bar
 			span.icon-bar
-		a(href="/projects").navbar-brand Muchachale
+		a(href="/projects").navbar-brand Prototipo
 
 		#main_menu.collapse.navbar-collapse.navbar-right
 			ul.nav.navbar-nav
