--- a/views/panel.jade
+++ b/views/panel.jade
@@ -1,8 +1,8 @@
-extends layout
+extends layout/layout
 
 block content
 	h1= object.name
-	include _breadcrumbs
+	include layout/_breadcrumbs
 
 	.row
 		.col-md-7
