fix form usuario, table + form proyectos

--- a/views/user/_user_form.jade
+++ b/views/user/_user_form.jade
@@ -1,6 +1,6 @@
 //- user = {username, password}
 
-form(role="form", method="post").form-horizontal
+form(role="form", method="post", action="/admin_panel/users/new").form-horizontal
 	.form-group
 		label(for="username").control-label.col-md-3 Nombre de usuario
 		.col-md-5
