--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,8 @@ html
 	head
 		title= title
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		meta(http-equiv="content-type", content="text/html")
+		meta(charset="UTF-8")
 		link(rel='stylesheet', href='/css/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/main.css')
 		script(src="/js/jquery.js",  type="text/javascript", defer)
