--- a/views/home.jade
+++ b/views/home.jade
@@ -1,27 +1,21 @@
-extends layout/layout
+doctype 5
+html
+	head
+		title= title
+		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		link(rel='stylesheet', href='/css/bootstrap.css')
+		link(href="/css/signin.css", rel="stylesheet")
+		script(src="/js/jquery.js",  type="text/javascript", defer)
+		script(src="/js/bootstrap.js",  type="text/javascript", defer)
 
-block content
-	.well(style="max-width: 700px; margin: 2em auto; padding: 3em")
-		h1 Prototipo - Home
-		form(role="form", ).form-horizontal
-			.form-group
-				label(for="input_username_email").control-label.col-sm-4
-					| Email / Username
-				.col-sm-8
-					input(type="text", placeholder="Email / Username", id="input_username_email", name="email-username", required, autofocus).form-control
-			.form-group
-				label(for="input_password").control-label.col-sm-4
-					| Contraseña
-				.col-sm-8
-					input(type="password", placeholder="Password" id="input_password", name="password", required).form-control
-			.form-group
-				.col-sm-offset-4.col-sm-8
-					.checkbox
-						label
-							input(type="checkbox")
-							| Recordarme
-			.form-group
-				.col-sm-offset-4.col-sm-8
-					button(type="submit").btn.btn-primary Iniciar Sesión
+	body
+		.container
+		form(role="form", ).form-signin
+			h2 Prototipo - Home
+			input(type="text", placeholder="Email / Nombre de usuario", id="input_username_email", name="email-username", required, autofocus).form-control
+			input(type="password", placeholder="Contraseña" id="input_password", name="password", required).form-control
+			label.checkbox
+				input(type="checkbox")
+				| Recordarme
+			button(type="submit").btn.btn-lg.btn-block.btn-primary Iniciar Sesión
 
-	script(src="/js/cookies.js")
