--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -46,5 +46,25 @@
 		&.selected
 			color: #a94442
 
+.sorters
+	display: inline-block
+	width: 12px
+	font-size: 0.7em
+	margin-left: 0.8em
+	margin-bottom: 0
+	vertical-align: top
+	a
+		height: 10px
+		position: relative
+		display: block
+		text-align: left
+		color: #ccc
+		&.active
+			color: #428bca
+		&:first-child
+			margin-top: -2px
+		&:last-child
+			margin-left: -1px
+
 // Icons
 @import icons
