--- a/views/admin_users.jade
+++ b/views/admin_users.jade
@@ -7,3 +7,5 @@ block content
 		a(href="/admin_panel/users/new")
 			i.glyphicon.glyphicon-plus Agregar
 	include user/_users_table
+
+	script(src="/js/admin_users.js", async)
