--- a/views/layout/admin_layout.jade
+++ b/views/layout/admin_layout.jade
@@ -7,6 +7,7 @@ html
 		link(rel='stylesheet', href='/stylesheets/main.css')
 		script(src="/js/jquery.js",  type="text/javascript", defer)
 		script(src="/js/bootstrap.js",  type="text/javascript", defer)
+		script(src="/js/list.js",  type="text/javascript", async)
 
 	body
 		include _header
