--- a/views/layout/_left_menu.jade
+++ b/views/layout/_left_menu.jade
@@ -1,5 +1,5 @@
 ul.nav.nav-pills.nav-stacked
-	li: a(href="/admin_panel") Administración
-	li: a(href="/admin_panel/users") Usuarios
-	li: a(href="/admin_panel/projects") Proyectos
-	li: a(href="#") Game Objects
+	li(class=(active == 0 ? "active" : "")): a(href="/admin_panel") Administración
+	li(class=(active == 1 ? "active" : "")): a(href="/admin_panel/users") Usuarios
+	li(class=(active == 2 ? "active" : "")): a(href="/admin_panel/projects") Proyectos
+	li(class=(active == 3 ? "active" : "")): a(href="#") Game Objects
