--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,5 @@
+button.btn,a{outline:0;}
+button.btn:focus,a:focus{outline:0}
 .child{margin-left:2em}
 .hide{display:none}
 .download_file{font-size:2em;color:#333;}
