--- a/views/layout/admin_layout.jade
+++ b/views/layout/admin_layout.jade
@@ -5,9 +5,12 @@ html
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		link(rel='stylesheet', href='/css/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/main.css')
+		link(rel='stylesheet', href='/css/chosen.css')
 		script(src="/js/jquery.js",  type="text/javascript", defer)
 		script(src="/js/bootstrap.js",  type="text/javascript", defer)
 		script(src="/js/list.js",  type="text/javascript", async)
+		script(src="/js/list.pagination.js",  type="text/javascript", async)
+		script(src="/js/chosen.jquery.js",  type="text/javascript", async)
 
 	body
 		include _header
