--- a/views/project/_projects_table.jade
+++ b/views/project/_projects_table.jade
@@ -38,4 +38,6 @@
 						.progress
 							div(id="progress_" + projects[i].id role="progressbar", aria-valuenow= projects[i].progress, aria-valuemin="0", aria-valuemax="100", style="width: " + projects[i].progress + "%").progress-bar.progress-bar-info
 					td(class="status")= projects[i].status
-					td(class="username", data-user=projects[i].created_by)= projects[i].username
+					td(class="username", data-user=projects[i].created_by)= username(projects[i].created_by)
+
+	ul.pagination.pull-right
