--- a/views/project_details.jade
+++ b/views/project_details.jade
@@ -14,12 +14,14 @@ block content
 				div(id="progress_" + project.id role="progressbar", aria-valuenow= project.progress, aria-valuemin="0", aria-valuemax="100", style="width: " + project.progress + "%").progress-bar.progress-bar-info
 			div= project.progress + " %"
 		dt= "Estado "
-			span(class=(project.status === "active" ? "label label-primary" : project.status === "paused" ? "label label-warning" : "label label-danger"))= project.status
+			span(class=(project.status === "active" ? "label label-primary" : project.status === "paused" ? "label label-warning" : "label label-danger"))= (project.status === "active" ? "Activo" : project.status === "paused" ? "Pausado" : "Finalizado")
 		dt Creado por
-		- var test = {username: ""}
-		dd= test.username
-		dt Usuarios
+		- for(var i = 0; i < users.length; i++)
+			- if (users[i].id === project.created_by)
+				dd= users[i].username
+				- break
+		dt Usuarios con permiso de acceso
 		dd
-			ul.list-unstyled
+			ul
 				- for(var i = 0; i < users.length; i++)
 					li= users[i].username
