--- a/views/project_details.jade
+++ b/views/project_details.jade
@@ -16,10 +16,7 @@ block content
 		dt= "Estado "
 			span(class=(project.status === "active" ? "label label-primary" : project.status === "paused" ? "label label-warning" : "label label-danger"))= (project.status === "active" ? "Activo" : project.status === "paused" ? "Pausado" : "Finalizado")
 		dt Creado por
-		- for(var i = 0; i < users.length; i++)
-			- if (users[i].id === project.created_by)
-				dd= users[i].username
-				- break
+			dd= project.created_by.username
 		dt Usuarios con permiso de acceso
 		dd
 			ul
