creacion game objects (admin_panel), visualizacion de árbol de objetos de proyectos

--- a/views/admin_users.jade
+++ b/views/admin_users.jade
@@ -2,6 +2,7 @@ extends layout/admin_layout
 
 block content
 	h2 Sommelier Manager
+	include _flash
 
 	p.pull-right
 		a(href="/admin_panel/users/new")
