--- a/views/objects_tree.jade
+++ b/views/objects_tree.jade
@@ -4,6 +4,7 @@ block content
 	h1= title
 	p #{project_name}
 	include layout/_breadcrumbs
+	include _flash
 
 	div
 		- for (var i = 0; i <objects.length; i++)
