--- a/views/project/_project_form.jade
+++ b/views/project/_project_form.jade
@@ -31,7 +31,6 @@ form(role="form", method="post", action="/admin_panel/projects/new").form-horizo
 	.form-group
 		.col-md-offset-3.col-md-5
 			button(type="submit").btn.btn-primary Guardar
-			&nbsp;
-			a(href="/admin_panel/users") Cancelar
+			a(href="/admin_panel/users").btn.btn-link Cancelar
 
 script(src="/js/project_form.js", async)
