--- a/views/project/_projects_table.jade
+++ b/views/project/_projects_table.jade
@@ -33,14 +33,14 @@
 			- if (projects.length)
 				- for (var i = 0; i < projects.length; i++)
 					tr
-						td: a(href="/admin_panel/projects/" + projects[i]._id, class="name")= projects[i].name
+						td: a(href="/admin_panel/projects/" + projects[i].name, class="name")= projects[i].name
 						td
 							small(class="progreso")= projects[i].progress + " %"
 							.progress
-								div(id="progress_" + projects[i]._id role="progressbar", aria-valuenow= projects[i].progress, aria-valuemin="0", aria-valuemax="100", style="width: " + projects[i].progress + "%").progress-bar.progress-bar-info
+								div(id="progress_" + projects[i].id role="progressbar", aria-valuenow= projects[i].progress, aria-valuemin="0", aria-valuemax="100", style="width: " + projects[i].progress + "%").progress-bar.progress-bar-info
 						td(class="status")= projects[i].status
 						//- td(class="username", data-user=projects[i].created_by)= username(projects[i].created_by)
-						td(class="username", data-user=projects[i].created_by._id)= projects[i].created_by.username
+						td(class="username", data-user=projects[i].created_by.id)= projects[i].created_by.username
 			- else
 				tr: td(colspan="4").text-center Proyectos no encontrados
 
