fix creación game objects (asignación de usuarios al objeto recién creado, filtro por proyecto de objeto padre), vista panel de game object casi lista (todo: todo panel)

--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -73,5 +73,8 @@ button.btn, a
 .nav-pills > li > a
 	border: 1px solid #eee
 
+.breadcrumb > li + li:before
+	content: "\003e"
+
 // Icons
 @import icons
