--- a/views/_to_do_panel.jade
+++ b/views/_to_do_panel.jade
@@ -2,8 +2,7 @@
 	!= "<script type='text/javascript' id='extra'>"
 	!= "var extra = {};"
 	!= "extra.board_id = " + extra.board_id + ";"
-	!= "extra.user_object_id = " + extra.user_object_id + ";"
-	!= "extra.role = '" + extra.role + "';"
+	!= "extra.task = '" + extra.task + "';"
 	!= "extra.task_description = '" + (extra.task_description ? extra.task_description : "") + "';"
 	!= "extra.progress = " + extra.progress + ";"
 	!= "</script>"
