se incluyen variables locals (flash, crumbs, children), uso de módulo async

--- a/views/_flash.jade
+++ b/views/_flash.jade
@@ -1,56 +1,56 @@
-- if (flash.info || flash.error || flash.success || flash.warning)
-	- var type = ""
-	- var content = ""
-	- if (flash.info)
-		- type = "alert-info"
-		- if (flash.info instanceof Array ) {
-			- for (var i in flash.info) {
-				- content += flash.info[i] + "<br />"
-			- }
-		- } else  {
-			- content = flash.info
+- var messages = flash()
+- var type = ""
+- var content = ""
+- if (messages.info)
+	- type = "alert-info"
+	- if (messages.info instanceof Array ) {
+		- for (var i in messages.info) {
+			- content += messages.info[i] + "<br />"
 		- }
-		div(class="alert alert-dismissable " + type)
-			button(type="button", data-dismiss="alert", aria-hidden="true").close &times;
-			!= content
+	- } else  {
+		- content = messages.info
+	- }
+	div(class="alert alert-dismissable " + type)
+		button(type="button", data-dismiss="alert", aria-hidden="true").close &times;
+		!= content
 
-	- if (flash.error)
-		- type = "alert-danger"
-		- if (flash.error instanceof Array ) {
-			- for (var i in flash.error) {
-				- content += flash.error[i] + "<br />"
-			- }
-		- } else  {
-			- content = flash.error
+- if (messages.error)
+	- type = "alert-danger"
+	- if (messages.error instanceof Array ) {
+		- for (var i in messages.error) {
+			- content += messages.error[i] + "<br />"
 		- }
-		div(class="alert alert-dismissable " + type)
-			button(type="button", data-dismiss="alert", aria-hidden="true").close &times;
-			!= content
+	- } else  {
+		- content = messages.error
+	- }
+	div(class="alert alert-dismissable " + type)
+		button(type="button", data-dismiss="alert", aria-hidden="true").close &times;
+		!= content
 
-	- if (flash.success)
-		-type = "alert-success"
-		- if (flash.success instanceof Array ) {
-			- for (var i in flash.success) {
-				- content += flash.success[i] + "<br />"
-			- }
-		- } else  {
-			- content = flash.success
+- if (messages.success)
+	-type = "alert-success"
+	- if (messages.success instanceof Array ) {
+		- for (var i in messages.success) {
+			- content += messages.success[i] + "<br />"
 		- }
-		div(class="alert alert-dismissable " + type)
-			button(type="button", data-dismiss="alert", aria-hidden="true").close &times;
-			!= content
+	- } else  {
+		- content = messages.success
+	- }
+	div(class="alert alert-dismissable " + type)
+		button(type="button", data-dismiss="alert", aria-hidden="true").close &times;
+		!= content
 
-	- if (flash.warning)
-		- type = "alert-warning"
-		- if (flash.warning instanceof Array ) {
-			- for (var i in flash.warning) {
-				- content += flash.warning[i] + "<br />"
-			- }
-		- } else  {
-			- content = flash.warning
+- if (messages.warning)
+	- type = "alert-warning"
+	- if (messages.warning instanceof Array ) {
+		- for (var i in messages.warning) {
+			- content += messages.warning[i] + "<br />"
 		- }
-		div(class="alert alert-dismissable " + type)
-			button(type="button", data-dismiss="alert", aria-hidden="true").close &times;
-			!= content
+	- } else  {
+		- content = messages.warning
+	- }
+	div(class="alert alert-dismissable " + type)
+		button(type="button", data-dismiss="alert", aria-hidden="true").close &times;
+		!= content
 
 
