--- a/views/user/_user_form.jade
+++ b/views/user/_user_form.jade
@@ -32,7 +32,7 @@ form(role="form", method="post", action="/admin_panel/users/new").form-horizonta
 		.col-md-5
 			select(id="role", name="role").form-control
 				- for (var i = 0; i < roles.length ; i++)
-					option(selected=((user.rol ? ((user.rol == roles[i]) ? true : false) : (i == 1 ? true : false))), value=i)= roles[i]
+					option(selected=((user.role ? ((user.role == roles[i]) ? true : false) : (i == 1 ? true : false))), value=roles[i])=(roles[i] === "admin" ? "Administrador" : "Usuario")
 
 	.form-group
 		label(for="projects").control-label.col-md-3 Proyectos
