--- a/views/admin_game_objects.jade
+++ b/views/admin_game_objects.jade
@@ -6,7 +6,8 @@ block content
 
 	p.pull-right
 		a(href="/admin_panel/gameobjects/new")
-			i.glyphicon.glyphicon-plus Agregar
+			i.glyphicon.glyphicon-plus
+			|  Agregar
 	include game_object/_game_object_table
 
 	script(src="/js/admin_game_objects.js", type="text/javascript", async)
