--- a/views/admin_users.jade
+++ b/views/admin_users.jade
@@ -6,7 +6,8 @@ block content
 
 	p.pull-right
 		a(href="/admin_panel/users/new")
-			i.glyphicon.glyphicon-plus Agregar
+			i.glyphicon.glyphicon-plus
+			|  Agregar
 	include user/_users_table
 
 	script(src="/js/admin_users.js", async)
