--- a/views/layout/_header.jade
+++ b/views/layout/_header.jade
@@ -1,22 +1,23 @@
-nav(role="navigation").navbar.navbar-default
-	.nav-header
-		button(type="button", data-toggle="collapse", data-target="#main-menu").navbar-toggle
-			span.sr-only Toggle navigation
-			span.icon-bar
-			span.icon-bar
-			span.icon-bar
-		a(href="/projects").navbar-brand Prototipo
+nav(role="navigation").navbar.navbar-default.navbar-static-top
+	div(style="background-color: transparent").container
+		.nav-header
+			button(type="button", data-toggle="collapse", data-target="#main-menu").navbar-toggle
+				span.sr-only Toggle navigation
+				span.icon-bar
+				span.icon-bar
+				span.icon-bar
+			a(href="/projects").navbar-brand Prototipo
 
-		#main_menu.collapse.navbar-collapse
-			ul.nav.navbar-nav
-				li.dropdown
-					a(href="#", data-toggle="dropdown").dropdown-toggle Administración&nbsp;
-						b.caret
-					ul.dropdown-menu
-						li(class=(active === 0 ? "active" : "")): a(href="/admin_panel/users") Usuarios
-						li(class=(active === 1 ? "active" : "")): a(href="/admin_panel/projects") Proyectos
-						li(class=(active === 2 ? "active" : "")): a(href="/admin_panel/gameobjects") Game Objects
+			#main_menu.collapse.navbar-collapse
+				ul.nav.navbar-nav
+					li.dropdown
+						a(href="#", data-toggle="dropdown").dropdown-toggle Administración&nbsp;
+							b.caret
+						ul.dropdown-menu
+							li(class=(active === 0 ? "active" : "")): a(href="/admin_panel/users") Usuarios
+							li(class=(active === 1 ? "active" : "")): a(href="/admin_panel/projects") Proyectos
+							li(class=(active === 2 ? "active" : "")): a(href="/admin_panel/gameobjects") Game Objects
 
-			ul.nav.navbar-nav.navbar-right
-				li: a(href="/projects") Proyectos
-				li: a(href="#")= user.username
+				ul.nav.navbar-nav.navbar-right
+					li: a(href="/projects") Proyectos
+					li: a(href="#")= user.username
