--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,4 @@
+.container{background-color:#fff}
 button.btn,a{outline:0;}
 button.btn:focus,a:focus{outline:0}
 .child{margin-left:2em}
@@ -28,6 +29,7 @@ button.btn:focus,a:focus{outline:0}
 .sorters a:last-child{margin-left:-1px}
 .nav-pills > li > a{border:1px solid #eee}
 .breadcrumb > li + li:before{content:"\003e"}
+table tr > td.table-acciones{text-align:center;vertical-align:middle}
 .icon{width:24px;height:24px;line-height:24px;display:inline-block;vertical-align:middle;background-repeat:no-repeat;background-image:url("../images/icons/icons.png");background-size:28px 52px;margin-right:.4em;}
 .triangle_right-icon{background-position:0 0}
 .triangle_down-icon{background-position:0 -28px}
