--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -1,3 +1,5 @@
+.container
+	background-color: #fff
 button.btn, a
 	outline: 0
 	&:focus
@@ -70,11 +72,17 @@ button.btn, a
 		&:last-child
 			margin-left: -1px
 
+// Administración
+
 .nav-pills > li > a
 	border: 1px solid #eee
 
 .breadcrumb > li + li:before
 	content: "\003e"
+
+table  tr > td.table-acciones
+	text-align: center
+	vertical-align: middle
 
 // Icons
 @import icons
