--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -13,6 +13,11 @@ button.btn, a
 	color: #333
 	&:hover
 		color: #777
+
+// Chosen
+.chosen-container-multi .chosen-choices li.search-field input[type="text"]
+	height: auto
+
 // Panel
 .alert-default
 	border-color: #ddd
