--- a/views/admin_game_objects.jade
+++ b/views/admin_game_objects.jade
@@ -8,6 +8,7 @@ block content
 		a(href="/admin_panel/gameobjects/new")
 			i.glyphicon.glyphicon-plus
 			|  Agregar
+	.clearfix
 	include game_object/_game_object_table
 
 	script(src="/js/admin_game_objects.js", type="text/javascript", async)
